fdo#74194 Revert "Resolves: #i121136# Improve Spreadsheet performance ..."

This reverts commit 6a62557d8632290ae7150f3922dece65f51af4bc.

pPageRows[] is a member array, so when not allocating MAXROWCOUNT
entries but nRealCnt instead it also needs some tracking mechanism to
reallocate in case a subsequent call needs more elements than the first
call.

Change-Id: Iadb7d2ceadcb8bd99d57c6188571d295c6b99fba